Fixed text alignment

--- a/src/app/contact/game-contact/game-contact.component.css
+++ b/src/app/contact/game-contact/game-contact.component.css
@@ -8,5 +8,5 @@ mat-card-content {
 }
 
 .actions__profiles {
-    float: right;
+    text-align: right;
 }
